# ProjectPrLWs

sfml3/: CMakeLists.txt
sfml3/01/: main.cpp
sfml3/02/: main.cpp
sfml3/03/: main.cpp
sfml3/04/: main.cpp
sfml3/sfml3_1/: CMakeLists.txt  main.cpp
sfml3/sfml3_2/: CMakeLists.txt  main.cpp
sfml3/sfml3_3/: CMakeLists.txt  main.cpp
sfml4/: CMakeLists.txt
sfml4/workshop1_1/: CMakeLists.txt  workshop1_1.cpp
sfml4/workshop1_2/: CMakeLists.txt  workshop1_2.cpp
sfml4/workshop1_3/: CMakeLists.txt  workshop1_3.cpp
sfml4/workshop1_4/: CMakeLists.txt  workshop1_4.cpp
sfml_2/: CMakeLists.txt
sfml_2/00/: CMakeLists.txt  main.cpp
sfml_2/01/: main.cpp
sfml_2/02/: main.cpp
sfml_2/sfml2_1/: CMakeLists.txt  main.cpp
sfml_2/sfml2_2/: CMakeLists.txt  main.cpp
smfl.1/: CMakeLists.txt
smfl.1/03/: CMakeLists.txt  sfml1_1.cpp
smfl.1/04/: CMakeLists.txt  sfml1_2.cpp
smfl.1/05/: CMakeLists.txt  sfml1_3.cpp
